# justhtml-xss-bench

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pre-commit.yml
scripts/: generate_httpleaks_vectors.py
src/xssbench/: __init__.py  bench.py  check.py  cli.py  compile.py  harness.py  normalize.py  portswigger.py  sanitizers.py
src/xssbench/js/: detect_javascript_urls.js  external_request_gestures.js  prelude.js  trigger_events.js
tests/: test_bench_unit.py  test_check_candidates.py  test_cli_ids.py  test_cli_output.py  test_harness_isolation.py  test_justhtml_adapter.py  test_load_vectors_dedupe.py  test_normalize.py  test_portswigger_refs.py  test_smoke.py
vectors/: bleach.json  httpleaks-LICENSE.txt  httpleaks.json  javascript-execution.json  nh3.json  owasp-xss-filter-evasion.json  payloadbox-xss-payload-list-LICENSE.txt  payloadbox-xss-payload-list.json  portswigger-expectations.json  smoke.json
