[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "justhtml-xss-bench"
version = "0.1.0"
description = "Headless-browser XSS execution benchmark harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.42",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

dev = [
  "pre-commit>=3.7",
]

# Optional: install common sanitizer libraries to benchmark them.
sanitizers = [
  "bleach>=6.1",
  "nh3>=0.2.20",
  "lxml-html-clean>=0.4.0",
]

[project.scripts]
xssbench = "xssbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
xssbench = ["js/*.js"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]


[tool.ruff]
target-version = "py313"
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "TD",
    "D",
    "EM",
    "TRY003",
    "T201",
    "FBT",
    "E501",
    "PLR",
    "C",
    "SIM",
    "ARG",
    "ERA001",
    "SLF001",
    "S105",
    "COM812",
    "ISC001",
    "EXE001",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101", "PT"]  # S101: allow assert, PT: we use unittest not pytest
